Revert "On desktop, made the title not wrap on to next line, limiting it to one line so that symbols dont break onto next line. When they break on desktop, they are cut off because of the fixed height"
This reverts commit 23132dc75218e6bcf9f16a2f8b3a4ffcc79569b2.

--- a/css/style.css
+++ b/css/style.css
@@ -1066,13 +1066,6 @@ a {
         width: 50%;
     }
 
-    #limit-title {
-        white-space: nowrap;
-
-
-
-    }
-
 
 
 
